Update bulk update move task